--- a/src/components/styles.scss
+++ b/src/components/styles.scss
@@ -1,3 +1,6 @@
+@import url("https://fonts.googleapis.com/icon?family=Material+Icons");
+@import url('https://fonts.googleapis.com/css2?family=Alegreya&family=Nunito+Sans&family=Source+Sans+Pro&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -9,6 +12,7 @@ html, body, #root{
 #root {
     display: flex;
     flex-direction: column;
+    font-family: 'Alegreya', serif;
 }
 .Header{
     background-image: linear-gradient(to right,#5800FF,#E900FF);
@@ -18,12 +22,17 @@ html, body, #root{
     align-items: center;
     justify-content: space-between;
     padding: 0.7rem;
+    box-shadow: 0.2rem 0.2rem #C0C0C0;
     &__nav{
+        display: flex;
         a{  
             font-size: 20px;
             text-decoration: none;
             color: white;
             margin-left: 1rem;
+        }
+        .Cart{
+            margin-left: 0.7rem;
         }
     }
     
@@ -31,6 +40,12 @@ html, body, #root{
 main {
     flex-grow: 1;
     padding: 0.7rem;
+}
+.ItemContainer{
+    display: flex;
+    font-size: 30px;
+    padding: 20px;
+    justify-content: center;
 }
 footer {
     background-image: linear-gradient(to left,#5800FF,#E900FF);
