--- a/src/components/styles.scss
+++ b/src/components/styles.scss
@@ -27,6 +27,7 @@ html, body, #root{
         display: flex;
         a{  
             font-size: 20px;
+            font-weight:600;
             text-decoration: none;
             color: white;
             margin-left: 1rem;
@@ -47,6 +48,7 @@ main {
     padding: 20px;
     justify-content: center;
 }
+// #5800FF,#E900FF
 footer {
     background-image: linear-gradient(to left,#5800FF,#E900FF);
     color: white;
